objects/APTS_Cart_Line_Group_Detail__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Cart_Line_Group_Id__c</fullName>
        <label>Cart Line Group Id</label>
        <referenceTo>APTS_Cart_Line_Group__c</referenceTo>
        <relationshipLabel>Cart Line Group Details</relationshipLabel>
        <relationshipName>Cart_Line_Group_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_EUR__c</fullName>
        <formula>IF(APTS_Discount__c&lt; 10, 
LEFT(SUBSTITUTE(TEXT(APTS_Discount__c), &quot;.&quot;, &quot;,&quot;), 4), 
IF(APTS_Discount__c&gt; 100, 
LEFT(SUBSTITUTE(TEXT(APTS_Discount__c), &quot;.&quot;, &quot;,&quot;), 6), 
LEFT(SUBSTITUTE(TEXT(APTS_Discount__c), &quot;.&quot;, &quot;,&quot;), 5) 
) 
) &amp; 
IF( 
(APTS_Discount__c - FLOOR(APTS_Discount__c)) &lt;&gt; 0, 
&quot;&quot; ,&quot;,00&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount % EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Discount__c</fullName>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Group_Hierarchy_Code__c</fullName>
        <label>Group Hierarchy Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Group_Hierarchy_Name__c</fullName>
        <label>Group Hierarchy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Amount_EUR__c</fullName>
        <formula>IF( 
APTS_Net_Amount__c&gt;= 1000000, 
TEXT(FLOOR(APTS_Net_Amount__c/ 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
APTS_Net_Amount__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(APTS_Net_Amount__c / 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(APTS_Net_Amount__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(APTS_Net_Amount__c, 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(APTS_Net_Amount__c, 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(APTS_Net_Amount__c, 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Amount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Cart Line Group Detail</label>
    <nameField>
        <displayFormat>CLGD-{0000000000}</displayFormat>
        <label>Cart Line Group Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Line Group Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>